# FHEM-MideaPortaSplit

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.example.yml  pyproject.toml
.github/workflows/: ci.yml
deploy/rpi/: docker-compose.yml  fhem-httpmod.cfg  fhem-module.cfg
fhem/: 70_MideaPortaSplit.pm  httpmod-example.cfg  mqtt2-example.cfg
src/midea_portasplit_bridge/: __init__.py  app.py  commands.py  config.py  device.py  http_api.py  mqtt_client.py  state.py
tests/: test_commands.py
