[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fhem-midea-portasplit"
version = "0.1.0"
description = "MQTT/HTTP bridge for Midea PortaSplit air conditioners and FHEM."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Matthias Sandmann" }
]
dependencies = [
  "msmart-ng>=2026.4.1,<2027",
  "paho-mqtt>=2.1,<3"
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "ruff>=0.11,<1"
]

[project.scripts]
midea-portasplit-bridge = "midea_portasplit_bridge.app:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

